# job-set-match-v2

./: .env.example  .gitignore  APP_INTEGRATION_SPEC.md  CLAUDE.md  PHASE_5_GUIDE.md  PROMPT_DESIGN_PERSO_DOCS.md  README.md  V2_PLAN.md  config.example.yaml  install.sh  providers.env.example  pyproject.toml  vault_layout.yaml
.claude/context/: anti-patterns.md  decisions.md  scope.md  status.md
_prompts_archive/: prompts_v2.py
app/: config.py  main.py  models.py  pipeline.py  vault_layout.py
app/llm/: __init__.py  anthropic_client.py  factory.py  openai_client.py  protocol.py
app/middleware/: auth.py
app/prompts/: __init__.py  analysis.py  company.py  context.py  generation.py  outreach.py
app/services/: brave_search.py  company_analyzer.py  content_fetcher.py  cover_letter.py  document_loader.py  obsidian_writer.py  offer_analyzer.py  outreach_generator.py  prompt_loader.py
app/utils/: dedup.py  paths.py  pricing.py  prompt_version.py  token_logger.py
docs/: architecture.md  reference.md
plugin/: manifest.json  sign.sh
plugin/background/: service_worker.js
plugin/content/: extract.js
plugin/popup/: popup.css  popup.html  popup.js
tests/: conftest.py  test_auth.py  test_brave_search.py  test_company_analyzer.py  test_content_fetcher.py  test_cover_letter.py  test_dedup.py  test_llm.py  test_models.py  test_obsidian_writer.py  test_outreach_generator.py  test_paths.py  test_pipeline.py  test_pricing.py  test_prompt_loader.py  test_prompt_version.py
