[project]
name = "jobsetmatch-v2"
version = "0.1.0"
description = "Outil personnel de veille emploi : Firefox → Claude → Obsidian"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "anthropic>=0.52",
    "python-dotenv>=1.0",
    "python-slugify>=8.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "playwright>=1.49",
    "httpx>=0.27",
    "openai>=1.0",
    "pyyaml>=6.0",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
